# skity

./: .gitignore  .habitat  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  codecov.yml
example/: CMakeLists.txt
example/case/animated_image/: CMakeLists.txt  main.cc
example/case/basic/: CMakeLists.txt  example.cc  example.hpp  main.cc
example/case/blend/: CMakeLists.txt  blend_example.cc  blend_example.hpp  main.cc
example/case/clip/: CMakeLists.txt  clip_example.cc  clip_example.hpp  main.cc
example/case/color_filter/: CMakeLists.txt  color_filter_example.cc  color_filter_example.hpp  main.cc
example/case/complex_layer/: CMakeLists.txt  complex_layer_example.cc  complex_layer_example.hpp  main.cc
example/case/contour_aa/: CMakeLists.txt  contour_aa_example.cc  contour_aa_example.hpp  main.cc
example/case/fake_3d/: CMakeLists.txt  fake_3d_example.cc  fake_3d_example.hpp  main.cc
example/case/gradient/: CMakeLists.txt  gradient_example.cc  gradient_example.hpp  main.cc
example/case/image/: CMakeLists.txt  image_example.cc  image_example.hpp  image_gl.cc  image_mtl.mm  main.cc
example/case/image_filter/: CMakeLists.txt  image_filter_example.cc  image_filter_example.hpp  main.cc
example/case/lock_canvas/: CMakeLists.txt  main.cc  surface_gl.cc  surface_mtl.mm
example/case/mask_filter/: CMakeLists.txt  main.cc  mask_filter_example.cc  mask_filter_example.hpp
example/case/nanovg_frame/: CMakeLists.txt  frame_example.cc  main.cc  perf.cc  perf.hpp
example/case/pathop/: CMakeLists.txt  main.cc  pathop_example.cc  pathop_example.hpp
example/case/recorder/: CMakeLists.txt  main.cc  recorder_example.cc  recorder_example.hpp
example/case/render_target/: CMakeLists.txt  main.cc  render_target_example.cc  render_target_example.hpp
example/case/save_layer/: CMakeLists.txt  main.cc  save_layer_example.cc  save_layer_example.hpp
example/case/shape/: CMakeLists.txt  main.cc  shape_example.cc  shape_example.hpp
example/case/skp_loader/: CMakeLists.txt  main.cc
example/case/text/: CMakeLists.txt  main.cc  text_example.cc  text_example.hpp
example/common/: CMakeLists.txt  app.cc  app.hpp  app_utils.cc  app_utils.hpp  auto_release_pool.hpp  window.cc  window.hpp
example/common/gl/: window_gl.cc  window_gl.hpp
example/common/mtl/: window_mtl.hpp  window_mtl.mm
example/common/sw/: window_sw.cc  window_sw.hpp
include/: CMakeLists.txt
include/skity/: macros.hpp  skity.hpp
include/skity/effect/: color_filter.hpp  image_filter.hpp  mask_filter.hpp  path_effect.hpp  shader.hpp
include/skity/geometry/: camera.hpp  matrix.hpp  point.hpp  quaternion.hpp  rect.hpp  rrect.hpp  scalar.hpp  stroke.hpp  vector.hpp
include/skity/gpu/: gpu_backend_type.hpp  gpu_context.hpp  gpu_context_gl.hpp  gpu_context_mtl.h  gpu_context_web.hpp  gpu_render_target.hpp  gpu_surface.hpp  texture.hpp
include/skity/graphic/: alpha_type.hpp  bitmap.hpp  blend_mode.hpp  color.hpp  color_type.hpp  image.hpp  paint.hpp  path.hpp  path_measure.hpp  path_op.hpp  sampling_options.hpp  tile_mode.hpp
include/skity/io/: data.hpp  flattenable.hpp  logger.hpp  pixmap.hpp
module/codec/: CMakeLists.txt  README.md
module/io/: CMakeLists.txt  README.md
module/wgx/: CMakeLists.txt  README.md
platform/darwin/: CMakeLists.txt  Info.plist.in  README.md
src/: CMakeLists.txt  logging.cc  logging.hpp  tracing.cc  tracing.hpp
src/base/: base_macros.hpp  eintr_wrapper.hpp  file.hpp  fixed_types.hpp  hash.cc  hash.hpp  lru_cache.hpp  mapping.cc  mapping.hpp  unique_fd.cc  unique_fd.hpp  unique_object.hpp
src/effect/: color_filter.cc  color_filter_base.hpp  dash_path_effect.cc  dash_path_effect.hpp  discrete_path_effect.cc  discrete_path_effect.hpp  gradient_fallback.cc  gradient_fallback.hpp  gradient_shader.cc  gradient_shader.hpp  image_filter.cc  image_filter_base.hpp  mask_filter.cc  mask_filter_priv.hpp  path_effect.cc  pixmap_shader.cc  pixmap_shader.hpp  shader.cc
src/geometry/: camera.cc  conic.cc  conic.hpp  cubic.cc  cubic.hpp  geometry.cc  geometry.hpp  glm_helper.hpp  math.hpp  matrix.cc  point_priv.hpp  quaternion.cc  rect.cc  rrect.cc  stroke.cc  wangs_formula.hpp
src/gpu/: backend_cast.hpp  gpu_blit_pass.hpp  gpu_buffer.hpp  gpu_command_buffer.hpp  gpu_context_impl.cc  gpu_context_impl.hpp  gpu_device.cc  gpu_device.hpp  gpu_render_pass.hpp  gpu_render_pipeline.cc  gpu_render_pipeline.hpp  gpu_render_target.cc  gpu_sampler.cc  gpu_sampler.hpp  gpu_shader_function.hpp  gpu_shader_module.cc  gpu_shader_module.hpp  gpu_surface_impl.cc  gpu_surface_impl.hpp  gpu_texture.cc  gpu_texture.hpp  texture_impl.cc  texture_impl.hpp  texture_manager.cc  texture_manager.hpp
src/graphic/: bitmap.cc  bitmap_sampler.cc  bitmap_sampler.hpp  blend_mode.cc  blend_mode_priv.hpp  color.cc  color_priv.cc  color_priv.hpp  color_priv_neon.hpp  contour_measure.cc  contour_measure.hpp  image.cc  paint.cc  path.cc  path_measure.cc  path_op.cc  path_priv.cc  path_priv.hpp  path_scanner.cc  path_scanner.hpp  path_visitor.cc  path_visitor.hpp
src/io/: data.cc  pixmap.cc
src/recorder/: display_list.cc  display_list_builder.hpp  picture_recorder.cc  recorded_op.hpp  recording_canvas.cc
src/render/: auto_canvas.hpp  canvas.cc  canvas_state.cc  canvas_state.hpp  shape.hpp
src/text/: font.cc  font_manager.cc  font_style.cc  scaler_context.cc  scaler_context.hpp  scaler_context_cache.cc  scaler_context_cache.hpp  scaler_context_container.cc  scaler_context_container.hpp  scaler_context_desc.cc  scaler_context_desc.hpp  sfnt_header.hpp  text_blob.cc  text_run.cc  typeface.cc  utf.cc
src/utils/: annotation_mutex.hpp  arena_allocator.cc  arena_allocator.hpp  array_list.hpp  array_list_debug.hpp  batch_group.hpp  function_wrapper.hpp  list.hpp  no_destructor.hpp  settings.cc  thread_annotations.hpp  unique_id.cc  unique_id.hpp  vector_cache.hpp
test/: CMakeLists.txt
test/bench/: CMakeLists.txt  hw_benchmarks.cc  hw_path_raster_benchmarks.cc  matrix_benchmarks.cc  sw_benchmarks.cc
test/golden/: CMakeLists.txt  README.md  golden_test.cc
test/ut/: CMakeLists.txt  common.hpp
(+537 files in other folders)
